--- a/package.json
+++ b/package.json
@@ -1,198 +1,200 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   },
   "name": "jest-test",
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
-    "ansi-regex": "^5.0.1",
     "ansi-escapes": "^4.3.2",
-    "anymatch": "^3.1.3",
+    "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
     "argparse": "^1.0.10",
-    "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
-    "babel-preset-current-node-syntax": "^1.0.1",
     "babel-plugin-jest-hoist": "^29.6.3",
+    "babel-preset-current-node-syntax": "^1.0.1",
     "babel-preset-jest": "^29.6.3",
-    "brace-expansion": "^1.1.11",
     "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
+    "browserslist": "^4.22.1",
     "bser": "^2.1.1",
-    "camelcase": "^5.3.1",
     "buffer-from": "^1.1.2",
     "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001561",
     "chalk": "^4.1.2",
-    "ci-info": "^3.9.0",
     "char-regex": "^1.0.2",
+    "ci-info": "^3.9.0",
     "cjs-module-lexer": "^1.2.3",
     "cliui": "^8.0.1",
+    "co": "^4.6.0",
     "collect-v8-coverage": "^1.0.2",
     "color-convert": "^2.0.1",
-    "co": "^4.6.0",
     "color-name": "^1.1.4",
-    "convert-source-map": "^2.0.0",
     "concat-map": "^0.0.1",
-    "caniuse-lite": "^1.0.30001561",
-    "browserslist": "^4.22.1",
-    "cross-spawn": "^7.0.3",
-    "dedent": "^1.5.1",
-    "detect-newline": "^3.1.0",
-    "debug": "^4.3.4",
-    "diff-sequences": "^29.6.3",
-    "emoji-regex": "^8.0.0",
-    "emittery": "^0.13.1",
-    "error-ex": "^1.3.2",
+    "convert-source-map": "^2.0.0",
     "create-jest": "^29.7.0",
-    "escalade": "^3.1.1",
-    "esprima": "^4.0.1",
-    "escape-string-regexp": "^2.0.0",
-    "exit": "^0.1.2",
-    "execa": "^5.1.1",
-    "fb-watchman": "^2.0.2",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
+    "dedent": "^1.5.1",
     "deepmerge": "^4.3.1",
+    "detect-newline": "^3.1.0",
+    "diff-sequences": "^29.6.3",
     "electron-to-chromium": "^1.4.576",
+    "emittery": "^0.13.1",
+    "emoji-regex": "^8.0.0",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^2.0.0",
+    "esprima": "^4.0.1",
+    "execa": "^5.1.1",
+    "exit": "^0.1.2",
     "expect": "^29.7.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fb-watchman": "^2.0.2",
+    "fill-range": "^7.0.1",
     "find-up": "^4.1.0",
     "fs.realpath": "^1.0.0",
-    "fill-range": "^7.0.1",
+    "function-bind": "^1.1.2",
     "gensync": "^1.0.0-beta.2",
     "get-caller-file": "^2.0.5",
-    "glob": "^7.2.3",
     "get-package-type": "^0.1.0",
     "get-stream": "^6.0.1",
+    "glob": "^7.2.3",
     "globals": "^11.12.0",
     "graceful-fs": "^4.2.11",
-    "human-signals": "^2.1.0",
     "has-flag": "^4.0.0",
     "hasown": "^2.0.0",
+    "html-escaper": "^2.0.2",
+    "human-signals": "^2.1.0",
     "import-local": "^3.1.0",
     "imurmurhash": "^0.1.4",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "is-arrayish": "^0.2.1",
     "is-core-module": "^2.13.1",
-    "is-number": "^7.0.0",
-    "is-generator-fn": "^2.1.0",
     "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-number": "^7.0.0",
     "is-stream": "^2.0.1",
     "isexe": "^2.0.0",
     "istanbul-lib-coverage": "^3.2.0",
-    "fast-json-stable-stringify": "^2.1.0",
-    "html-escaper": "^2.0.2",
-    "function-bind": "^1.1.2",
+    "istanbul-lib-instrument": "^6.0.1",
     "istanbul-lib-report": "^3.0.1",
     "istanbul-lib-source-maps": "^4.0.1",
-    "jest-changed-files": "^29.7.0",
-    "jest-cli": "^29.7.0",
-    "istanbul-lib-instrument": "^6.0.1",
-    "jest-docblock": "^29.7.0",
     "istanbul-reports": "^3.1.6",
-    "jest-diff": "^29.7.0",
-    "jest-config": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
-    "jest-each": "^29.7.0",
+    "jest-changed-files": "^29.7.0",
     "jest-circus": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-diff": "^29.7.0",
+    "jest-docblock": "^29.7.0",
+    "jest-each": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-get-type": "^29.6.3",
     "jest-haste-map": "^29.7.0",
-    "jest-message-util": "^29.7.0",
-    "jest-mock": "^29.7.0",
     "jest-leak-detector": "^29.7.0",
     "jest-matcher-utils": "^29.7.0",
-    "jest-resolve": "^29.7.0",
-    "jest-regex-util": "^29.6.3",
+    "jest-message-util": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "jest-pnp-resolver": "^1.2.3",
-    "jest-runtime": "^29.7.0",
+    "jest-regex-util": "^29.6.3",
+    "jest-resolve": "^29.7.0",
     "jest-resolve-dependencies": "^29.7.0",
     "jest-runner": "^29.7.0",
+    "jest-runtime": "^29.7.0",
+    "jest-snapshot": "^29.7.0",
+    "jest-util": "^29.7.0",
+    "jest-validate": "^29.7.0",
     "jest-watcher": "^29.7.0",
     "jest-worker": "^29.7.0",
     "js-tokens": "^4.0.0",
-    "jest-validate": "^29.7.0",
-    "jest-snapshot": "^29.7.0",
-    "json-parse-even-better-errors": "^2.3.1",
+    "js-yaml": "^3.14.1",
     "jsesc": "^2.5.2",
-    "jest-util": "^29.7.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json5": "^2.2.3",
     "kleur": "^3.0.3",
-    "lines-and-columns": "^1.2.4",
     "leven": "^3.1.0",
+    "lines-and-columns": "^1.2.4",
     "locate-path": "^5.0.0",
+    "lru-cache": "^5.1.1",
     "make-dir": "^4.0.0",
     "makeerror": "^1.0.12",
-    "lru-cache": "^5.1.1",
     "merge-stream": "^2.0.0",
     "micromatch": "^4.0.5",
-    "minimatch": "^3.1.2",
     "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
     "ms": "^2.1.2",
-    "node-int64": "^0.4.0",
     "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
     "node-releases": "^2.0.13",
     "normalize-path": "^3.0.0",
     "npm-run-path": "^4.0.1",
-    "p-locate": "^4.1.0",
     "once": "^1.4.0",
     "onetime": "^5.1.2",
     "p-limit": "^3.1.0",
+    "p-locate": "^4.1.0",
     "p-try": "^2.2.0",
     "parse-json": "^5.2.0",
-    "path-is-absolute": "^1.0.1",
     "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "pirates": "^4.0.6",
-    "path-parse": "^1.0.7",
     "pkg-dir": "^4.2.0",
-    "js-yaml": "^3.14.1",
-    "json5": "^2.2.3",
     "pretty-format": "^29.7.0",
     "prompts": "^2.4.2",
+    "pure-rand": "^6.0.4",
     "react-is": "^18.2.0",
-    "resolve-cwd": "^3.0.0",
     "require-directory": "^2.1.1",
+    "resolve": "^1.22.8",
+    "resolve-cwd": "^3.0.0",
     "resolve-from": "^5.0.0",
     "resolve.exports": "^2.0.2",
-    "shebang-regex": "^3.0.0",
-    "shebang-command": "^2.0.0",
-    "sisteransi": "^1.0.5",
     "semver": "^6.3.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
     "signal-exit": "^3.0.7",
-    "source-map-support": "^0.5.13",
-    "source-map": "^0.6.1",
+    "sisteransi": "^1.0.5",
     "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.13",
     "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.6",
     "string-length": "^4.0.2",
     "string-width": "^4.2.3",
-    "stack-utils": "^2.0.6",
+    "strip-ansi": "^6.0.1",
     "strip-bom": "^4.0.0",
     "strip-final-newline": "^2.0.0",
-    "supports-color": "^7.2.0",
     "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
-    "strip-ansi": "^6.0.1",
-    "tmpl": "^1.0.5",
     "test-exclude": "^6.0.0",
-    "to-regex-range": "^5.0.1",
+    "tmpl": "^1.0.5",
     "to-fast-properties": "^2.0.0",
-    "type-fest": "^0.21.3",
+    "to-regex-range": "^5.0.1",
     "type-detect": "^4.0.8",
+    "type-fest": "^0.21.3",
     "undici-types": "^5.26.5",
-    "v8-to-istanbul": "^9.1.3",
     "update-browserslist-db": "^1.0.13",
+    "v8-to-istanbul": "^9.1.3",
     "walker": "^1.0.8",
     "which": "^2.0.2",
     "wrap-ansi": "^7.0.0",
     "wrappy": "^1.0.2",
-    "y18n": "^5.0.8",
     "write-file-atomic": "^4.0.2",
+    "y18n": "^5.0.8",
     "yallist": "^3.1.1",
-    "yargs-parser": "^21.1.1",
-    "yocto-queue": "^0.1.0",
     "yargs": "^17.7.2",
-    "pure-rand": "^6.0.4",
-    "resolve": "^1.22.8"
+    "yargs-parser": "^21.1.1",
+    "yocto-queue": "^0.1.0"
   },
   "scripts": {
     "test": "jest"
